load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "mediatype.go",
        "readonly.go",
        "security.go",
    ],
    importpath = "github.com/goharbor/harbor/src/core/filter",
    visibility = ["//visibility:public"],
    deps = [
        "//src/common:go_default_library",
        "//src/common/dao:go_default_library",
        "//src/common/models:go_default_library",
        "//src/common/secret:go_default_library",
        "//src/common/security:go_default_library",
        "//src/common/security/admiral:go_default_library",
        "//src/common/security/admiral/authcontext:go_default_library",
        "//src/common/security/local:go_default_library",
        "//src/common/security/robot:go_default_library",
        "//src/common/security/secret:go_default_library",
        "//src/common/token:go_default_library",
        "//src/common/utils/log:go_default_library",
        "//src/common/utils/oidc:go_default_library",
        "//src/core/auth:go_default_library",
        "//src/core/config:go_default_library",
        "//src/core/promgr:go_default_library",
        "//src/core/promgr/pmsdriver/admiral:go_default_library",
        "//src/pkg/authproxy:go_default_library",
        "//src/vendor/github.com/astaxie/beego/context:go_default_library",
        "//src/vendor/github.com/docker/distribution/reference:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "mediatype_test.go",
        "readonly_test.go",
        "security_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//src/common:go_default_library",
        "//src/common/config:go_default_library",
        "//src/common/dao:go_default_library",
        "//src/common/models:go_default_library",
        "//src/common/secret:go_default_library",
        "//src/common/security:go_default_library",
        "//src/common/security/local:go_default_library",
        "//src/common/security/secret:go_default_library",
        "//src/common/utils/oidc:go_default_library",
        "//src/common/utils/test:go_default_library",
        "//src/core/auth/db:go_default_library",
        "//src/core/auth/ldap:go_default_library",
        "//src/core/config:go_default_library",
        "//src/core/filter/test:go_default_library",
        "//src/core/promgr:go_default_library",
        "//src/core/promgr/pmsdriver/local:go_default_library",
        "//src/vendor/github.com/astaxie/beego:go_default_library",
        "//src/vendor/github.com/astaxie/beego/context:go_default_library",
        "//src/vendor/github.com/astaxie/beego/session:go_default_library",
        "//src/vendor/github.com/stretchr/testify/assert:go_default_library",
        "//src/vendor/github.com/stretchr/testify/require:go_default_library",
    ],
)
