load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "notification_handler.go",
        "notifier.go",
        "topics.go",
    ],
    importpath = "github.com/goharbor/harbor/src/core/notifier",
    visibility = ["//visibility:public"],
    deps = [
        "//src/common:go_default_library",
        "//src/common/utils/log:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["notifier_test.go"],
    embed = [":go_default_library"],
)
