load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "job.go",
        "response_handlers.go",
        "retag.go",
        "utils.go",
    ],
    importpath = "github.com/goharbor/harbor/src/core/utils",
    visibility = ["//visibility:public"],
    deps = [
        "//src/common/api:go_default_library",
        "//src/common/dao:go_default_library",
        "//src/common/job:go_default_library",
        "//src/common/job/models:go_default_library",
        "//src/common/models:go_default_library",
        "//src/common/utils/log:go_default_library",
        "//src/common/utils/registry:go_default_library",
        "//src/common/utils/registry/auth:go_default_library",
        "//src/core/config:go_default_library",
        "//src/core/service/token:go_default_library",
        "//src/vendor/github.com/docker/distribution/manifest/schema1:go_default_library",
        "//src/vendor/github.com/docker/distribution/manifest/schema2:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "job_test.go",
        "response_handlers_test.go",
        "utils_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//src/common/job:go_default_library",
        "//src/common/job/models:go_default_library",
        "//src/core/config:go_default_library",
        "//src/vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
